crates/djls-python/tests/snapshots/corpus__repos__babybuddy__core__templatetags__bootstrap.py.snap
---
source: crates/djls-python/tests/corpus.rs
expression: snapshot(result)
---
tag_rules: {}
filter_arities:
  "core.templatetags.bootstrap::filter::bool_icon":
    expects_arg: false
    arg_optional: false
block_specs: {}
