crates/djls-python/tests/snapshots/corpus__repos__babybuddy__core__templatetags__breadcrumb.py.snap
---
source: crates/djls-python/tests/corpus.rs
expression: snapshot(result)
---
tag_rules:
  "core.templatetags.breadcrumb::tag::child_quick_switch":
    arg_constraints:
      - Min: 3
      - Max: 3
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: current_child
        required: true
        kind: Variable
        position: 0
      - name: target_url
        required: true
        kind: Variable
        position: 1
    as_var: keep
filter_arities: {}
block_specs: {}
