crates/djls-python/tests/snapshots/corpus__repos__babybuddy__core__templatetags__datetime.py.snap
---
source: crates/djls-python/tests/corpus.rs
expression: snapshot(result)
---
tag_rules: {}
filter_arities:
  "core.templatetags.datetime::filter::datetime_short":
    expects_arg: false
    arg_optional: false
block_specs: {}
